# AIGoPlayer

./: .dockerignore  README.md  docker-compose.yml  start.bat
backend/: Dockerfile  ai.py  board.py  cnn_agent.py  game.py  go_engine.cp314-win_amd64.pyd  rules.py  score.py  server.py  train_gpu_local.py
cpp_engine/: CMakeLists.txt
cpp_engine/src/: board.cpp  board.h  game.cpp  game.h  go_engine.cpp  logger.cpp  logger.h  mcts.cpp  mcts.h  rules.cpp  rules.h  scoring.cpp  scoring.h
frontend/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: AIAnalysis.jsx  Board.jsx  Controls.jsx  GameInfo.jsx  GameOverModal.jsx  ModelPicker.jsx  MoveHistory.jsx  Stone.jsx
frontend/src/hooks/: useGame.js
frontend/src/styles/: board.css
